[gd_scene load_steps=2 format=3 uid="uid://fc380vl01kmt"]

[ext_resource type="Script" path="res://menu/Admin_Registration_Batch.gd" id="1_l3wk8"]

[node name="Registration" type="Node2D"]

[node name="FileDialog" type="FileDialog" parent="."]
initial_position = 1
title = "Open a File"
size = Vector2i(500, 400)
visible = true
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 361.0
offset_bottom = 180.0
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Registration" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3wk8")
metadata/_edit_use_anchors_ = true

[node name="RegisterBtn" type="Button" parent="Control/Registration"]
layout_mode = 0
offset_left = 145.0
offset_top = 144.0
offset_right = 217.0
offset_bottom = 175.0
text = "Register
"
metadata/_edit_use_anchors_ = true

[node name="ErrorLbl" type="RichTextLabel" parent="Control/Registration"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.00555556
anchor_bottom = 0.472222
offset_left = 16.0
offset_top = 20.0
offset_right = 350.0
offset_bottom = 50.0
metadata/_edit_use_anchors_ = true

[node name="HTTPRequest" type="HTTPRequest" parent="Control/Registration"]

[node name="HTTPRequest_PWD" type="HTTPRequest" parent="Control/Registration"]

[node name="HTTPRequest_email" type="HTTPRequest" parent="Control/Registration"]

[node name="BackBtn" type="Button" parent="."]
offset_left = 3.0
offset_top = 158.0
offset_right = 64.0
offset_bottom = 178.0
theme_override_font_sizes/font_size = 8
text = "Back to Menu"
metadata/_edit_use_anchors_ = true

[connection signal="file_selected" from="FileDialog" to="Control/Registration" method="_on_file_dialog_file_selected"]
[connection signal="button_down" from="Control/Registration/RegisterBtn" to="Control/Registration" method="_on_register_btn_button_down"]
[connection signal="button_down" from="BackBtn" to="Control/Registration" method="_on_back_btn_button_down"]
